[project]
name = "grdwindinversion"
requires-python = ">= 3.9"
description = "Package to perform Wind inversion from GRD Level-1 SAR images"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "xsar",
    "xsarsea",
    "xarray",
    "xarray-datatree",
    "pyyaml",
    "numpy",
    "scipy",
    "fsspec",
    "aiohttp",
]

dynamic = ["version"]
classifiers=[
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
    ]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grdwindinversion"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "grdwindinversion"

[project.scripts]
SAR_L1-to-L2_wind_processor = "grdwindinversion.main:processor_starting_point"
