[project]
name = "grdwindinversion"
description="Package to perform Wind inversion from GRD Level-1 SAR images"
readme = "README.md"
keywords = [
  "xarray",
  "earth-observation",
  "remote-sensing",
  "satellite-imagery",
  "Sentinel-1",
  "RCM",
  "RadarSat2",
  "sar",
  "synthetic-aperture-radar",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
]
requires-python = ">= 3.9"
license = {text = "MIT"}
authors = [
  { name = "Antoine Grouazel", email = "antoine.grouazel@ifremer.fr" },
]

dependencies = [
    "xsar",
    "xsarsea",
    "xarray",
    "xarray-datatree",
    "pyyaml",
    "numpy",
    "scipy",
    "fsspec",
    "aiohttp",
]

dynamic = ["version"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grdwindinversion"]

[tool.setuptools_scm]
fallback_version = "999"

[tool.isort]
profile = "black"
skip_gitignore = true
float_to_top = true
default_section = "THIRDPARTY"
known_first_party = "grdwindinversion"

[project.scripts]
SAR_L1-to-L2_wind_processor = "grdwindinversion.main:processor_starting_point"
